--- a/templates/data_uji/index.html
+++ b/templates/data_uji/index.html
@@ -37,15 +37,17 @@
 
 					<div class="card-body">
 
-						<table id="data_uji_table" class="table table-bordered table-hover">
-							<thead>
-								<tr>
-									<th>Id</th>
-									<th>Data</th>
-									<th>Action</th>
-								</tr>
-							</thead>
-						</table>
+						<div class="table-responsive">
+							<table id="data_uji_table" class="table table-bordered table-hover">
+								<thead>
+									<tr>
+										<th>Id</th>
+										<th>Data</th>
+										<th>Action</th>
+									</tr>
+								</thead>
+							</table>
+						</div>
 
 					</div>
 				</div>
