--- a/templates/kosakata/index.html
+++ b/templates/kosakata/index.html
@@ -35,17 +35,19 @@
 
 
 					<div class="card-body">
-						<table id="kosakata_table" class="table table-bordered table-hover" width="100%">
-							<thead>
-								<tr>
-									<th>Id</th>
-									<th>Kata</th>
-									<th>Arti kata</th>
-									<th>Action</th>
-								</tr>
-							</thead>
+						<div class="table-responsive">
+							<table id="kosakata_table" class="table table-bordered table-hover" width="100%">
+								<thead>
+									<tr>
+										<th>Id</th>
+										<th>Kata</th>
+										<th>Arti kata</th>
+										<th>Action</th>
+									</tr>
+								</thead>
 
-						</table>
+							</table>
+						</div>
 					</div>
 				</div>
 			</div>
