--- a/templates/normalisasi/index.html
+++ b/templates/normalisasi/index.html
@@ -30,16 +30,18 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="card card-info">
-					<div class="card-body">
-						<table id="data_uji_table" class="table table-bordered table-hover">
-							<thead>
-								<tr>
-									<th>Id</th>
-									<th>Stemmed Data</th>
-									<th>Action</th>
-								</tr>
-							</thead>
-						</table>
+					<div class="table-responsive">
+						<div class="card-body">
+							<table id="data_uji_table" class="table table-bordered table-hover">
+								<thead>
+									<tr>
+										<th>Id</th>
+										<th>Stemmed Data</th>
+										<th>Action</th>
+									</tr>
+								</thead>
+							</table>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -87,18 +89,20 @@
 					<div class="card-header">
 						<h3 class="card-title">Hasil Levenshtein</h3>
 					</div>
-					<table class="table">
-						<thead>
-							<tr>
-								<th>Kata</th>
-								<th>C</th>
-								<th>Jarak</th>
-							</tr>
-						</thead>
-						<tbody class="table" id="levenshtein_table">
+					<div class="table-responsive">
+						<table class="table">
+							<thead>
+								<tr>
+									<th>Kata</th>
+									<th>C</th>
+									<th>Jarak</th>
+								</tr>
+							</thead>
+							<tbody class="table" id="levenshtein_table">
 
-						</tbody>
-					</table>
+							</tbody>
+						</table>
+					</div>
 				</div>
 			</div>
 			<div class="modal-footer">
