--- a/templates/cleaning/index.html
+++ b/templates/cleaning/index.html
@@ -33,17 +33,19 @@
 			<div class="col-sm-12">
 				<div class="card">
 
-					<div class="card-body">
-						<table id="data_uji_table" class="table table-bordered table-hover">
-							<thead>
-								<tr>
-									<th>Id</th>
-									<th>Raw data</th>
-									<th>Cleaned Data</th>
-									<th>Stemmed Data</th>
-								</tr>
-							</thead>
-						</table>
+					<div class="table-responsive">
+						<div class="card-body">
+							<table id="data_uji_table" class="table table-bordered table-hover">
+								<thead>
+									<tr>
+										<th>Id</th>
+										<th>Raw data</th>
+										<th>Cleaned Data</th>
+										<th>Stemmed Data</th>
+									</tr>
+								</thead>
+							</table>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -59,7 +61,7 @@
 
 $(document).ready(function() {
 
-var data_uji_datatable = null;
+	var data_uji_datatable = null;
 	showSpinner();
 	$.ajax({
 		url: "{% url 'cleaning/cleaning' %}",
