--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Levenshtein</title>
+    <title>Normalisasi Damerau Levenshtein</title>
     <!--[if lt IE 11]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
