--- a/templates/normalisasi/summary.html
+++ b/templates/normalisasi/summary.html
@@ -91,7 +91,7 @@
 								</tr>
 							</thead>
 							<tbody class="table">
-								{% for input, damerau,jumlah in inputan_damerau %}
+								{% for input, damerau,jumlah in inputan_levenshtein %}
 								<tr>
 									<td
 									{% if jumlah != 1 %}
