ubah sikit tampilan

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,12 +3,12 @@
 
 {% block import-css %}
 <style>
-.page-header-title > h1 {
-	font-weight: 400;
-	color: #fff;
-	text-align: center;
+	.page-header-title>h1 {
+		font-weight: 400;
+		color: #fff;
+		text-align: center;
 
-}
+	}
 </style>
 {% endblock import-css %}
 {% block content %}
@@ -18,9 +18,15 @@
 			<div class="page-block">
 				<div class="row align-items-center">
 					<div class="col-md-12 col-sm-12">
-						<div class="page-header-title align-items-center ">
-							<h1 >NORMALISASI BAHASA DEWI</h1>
-
+						<div class="page-header-title align-items-center text-center">
+							<h1>Normalisasi Teks Bahasa Sumbawa Menggunakan </br>
+								Damerau Lavenshtein Distance
+							</h1>
+							<img class="img-fluid" style="margin: 20px;" src="{% static '/img/logo-uin.png' %}" alt="">
+							<p style="font-size: 28px; margin-bottom: 0px;margin-top: 10px;"><strong>DEWI
+									SARTIKA</strong> (11451201704)</p>
+							<P style="font-size: 28px; margin: 0;">UNIVERSITAS ISLAM NEGERI SULTAN SYARIF KASIM RIAU
+							</P>
 						</div>
 
 					</div>
@@ -28,7 +34,6 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
 </div>
 {% endblock content %}
