--- a/templates/normalisasi/perhitungan.html
+++ b/templates/normalisasi/perhitungan.html
@@ -8,7 +8,7 @@
 				<div class="row align-items-center">
                     <div class="col-md-12 col-sm-12">
                         <div class="page-header-title d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center ">
-                            <h4 >Normalisasi Bahasa Makassar</h4>
+                            <h4 >Normalisasi Bahasa Sumbawa</h4>
                             <div class="btn-toolbar mb-2 mb-md-0">
 
                             </div>
