--- a/templates/normalisasi/summary.html
+++ b/templates/normalisasi/summary.html
@@ -15,7 +15,7 @@
 						<div class="page-header-title">
 							<div class="col-md-12 col-sm-12">
 								<div class="page-header-title d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center ">
-									<h4 >Kesimpulan Normalisasi Bahasa Makassar</h4>
+									<h4 >Kesimpulan Normalisasi Bahasa Sumbawa</h4>
 									<div class="btn-toolbar mb-2 mb-md-0">
 
 									</div>
